  Previously events may have been ignored completely upon PID death,
  or ignored until future events on the monitored files.
  [bug introduced with inotify support added in coreutils-7.5]

  tail -f /dev/tty is now supported by not using inotify when any
  non regular files are specified, as inotify is ineffective with these.
  [bug introduced with inotify support added in coreutils-7.5]

  uptime no longer outputs the AM/PM component of the current time,
  as that's inconsistent with the 24 hour time format used.
  [bug introduced in coreutils-7.0]

  expr now returns number of characters matched (instead of incorrect
  number of bytes matched) with 'match'/':' operators on multibyte strings.

** New features

  expand and unexpand now support specifying an offset for tab stops
  by prefixing the last specified number like --tabs=1,+8 which is
  useful for visualizing diff output for example.

  ls supports a new --hyperlink[=when] option to output file://
  format links to files, supported by some terminals.

  split supports a new --hex-suffixes[=from] option to create files with
  lower case hexadecimal suffixes, similar to the --numeric-suffixes option.

  env now has a --chdir (-C) option to change the working directory before
  executing the subsidiary program.

  expr supports multibyte strings for all string operations.

** Improvements

  mv --verbose now distinguishes rename and copy operations.

  tail -f now exits immediately if the output is piped
  and the reader of the pipe terminates.

  tail -f no longer erroneously warns about being ineffective
  when following a single tty, as the simple blocking loop used
  is effective in this case.


* Noteworthy changes in release 8.27 (2017-03-08) [stable]

** Bug fixes

  cp --parents will now set an SELinux context for created directories,
  as appropriate for the -a, --preseve=context, or -Z options.
  [bug present since SELinux support added in coreutils-6.10]
